--- a/TODO.org
+++ b/TODO.org
@@ -1,14 +1,12 @@
 * Todos                                                               :tapta:
 ** high prio
-*** TODO fix ctrl areas of DecMer and ForkJoin
+*** DONE fix ctrl areas of DecMer and ForkJoin
+CLOSED: [2011-06-04 Sat 03:48]
 size/position is wrong
 more beautiful
-*** TODO enable adding multiple in a row
+*** DONE enable adding multiple in a row
+CLOSED: [2011-06-04 Sat 03:46]
 **** needs beautification of ctrl areas
-*** TODO final node merge into other node
-*** TODO dragging edges 
-*** TODO select arrow (for properties)
-*** TODO display name of actions
 *** DONE rake area to show activity on next level
 CLOSED: [2011-05-20 Fri 09:24]
 **** layers to generate initial activity for layer0
@@ -21,13 +19,20 @@ now layer-local
 **** drag item onto edge
 **** menubar could have instances of the nodes
 **** who handles the procedure?
-*** TODO menubar delete
+*** DONE menubar delete
+CLOSED: [2011-06-04 Sat 03:47]
 **** tell paths to remove the node
 *** DONE generate new path
 CLOSED: [2011-05-25 Wed 21:51]
 **** idea: drop new final node onto an area of a forkjoin/decmer
 they have areas corresponding to the space: above, between and below
 their outgoing edges
+*** TODO BUG: newpath with only MIMO leads to wrong insertion
+factor out stuff and write tests for it
+*** TODO BUG: removing left last path with idx != 0
+factor out stuff and write tests for it
+*** TODO display name of actions
+*** TODO dragging edges to switch order of paths
 *** TODO merge path into other, ie. drag final node onto some node
 *** TODO move ctrl area style to css
 *** TODO panes
@@ -49,16 +54,20 @@ their outgoing edges
 *** TODO edges to query source node for label
 **** bind edges to their source node to update label
 **** background: decmers provide their answers to be displayed on outedges
-*** TODO x_req/y_req
+*** TODO fix x_req/y_req - edges have also space and padding?
 elements have a size, optional x/y padding which needs to be accounted
 for in the space allocation
 ** med prio
-*** TODO fix existing tests
+*** DONE fix existing tests
+CLOSED: [2011-06-04 Sat 03:48]
+*** TODO select arrow (for properties) icon
+exist but without icon so far
 *** TODO print
 **** 6 layers, one per page, landscape
 **** zoom to fit?
 **** generate pdf or use browser?
 *** TODO switch edges, ie change path order
+*** TODO action library tool
 *** TODO decmer library tool,
 **** like action lib but on decmers
 **** show only decmers that have a name
@@ -67,20 +76,13 @@ for in the space allocation
 **** keep git-like storage above localstorage in mind
 ***** would it help?
 *** TODO drag preview
-*** TODO control event propagation
-**** selective listening to events
-**** concept of change:attr for defchild children?
-**** defchild flag to trigger propagation
-** low prio and easy
-Theses tasks are meant for newbies to enter the project
-*** TODO top-layer without edges
-***** how do we place them?
-*** TODO bottom-layer without rakes
 *** TODO collection set parent of their models, in add
 the parent is used to generate the key for the storage. currently in
 several places there is code to differentiate between
 models/collection with parent set and models that are a member of
 collections.
+
+XXX: this might be outdated
 *** TODO move diagram around within one layer
 *** TODO zooming within one layer
 *** TODO draw rake symbol
@@ -92,3 +94,8 @@ collections.
 *** TODO full test coverage
 **** for non-view
 **** for view?
+** low prio and easy
+Theses tasks are meant for newbies to enter the project
+*** TODO top-layer without edges
+***** how do we place them?
+*** TODO bottom-layer without rakes
