--- a/TODO.org
+++ b/TODO.org
@@ -142,8 +142,14 @@ CLOSED: [2011-08-19 Fri 12:44]
 CLOSED: [2011-08-19 Fri 13:28]
 *** DONE json export to filesystem (save)
 CLOSED: [2011-08-19 Fri 14:20]
-*** TODO merge path into other, ie. drag final node onto mimo
+*** DONE merge path into other, ie. drag final node onto mimo
+CLOSED: [2011-08-19 Fri 18:03]
 dragging of final node does not work on tablets
+*** DONE subtract of arcs
+CLOSED: [2011-08-19 Fri 18:37]
+make ctrl area of arc visible
+support subtract of arc
+*** TODO fix mimoctrlins - see comment in merge paths
 *** TODO json import to filesystem (load)
 *** TODO print
 **** 6 layers, one per page, landscape
