--- a/TODO.org
+++ b/TODO.org
@@ -163,13 +163,21 @@ CLOSED: [2011-09-05 Mon 15:35]
 check svg spec how to achieve that - 1.2 tiny, unsupported, brings
 textArea
 https://secure.wikimedia.org/wikibooks/de/wiki/SVG/_Text_als_Graphik
-*** TODO decision in lib
+*** DONE decision in lib
+CLOSED: [2011-09-12 Mon 22:03]
 with labels for outgoing edges - line-based textarea
-*** TODO save/load - server component
-*** TODO json export/import to/from filesystem
+basic support is there
+*** TODO decision: labels for outgoing edges
+line-based textarea
+*** TODO remove merges from decision lib
+either a merge is not a decision, i.e. payload just: "merge"
+or hide pure merges from the lib
 *** TODO top-layer without edges, initial/final
 ***** how do we place them? free
 *** TODO aggregate req/gen information
+*** TODO save/load - server component
+**** TODO investigate couchdb
+*** TODO json export/import to/from filesystem
 *** TODO show summary on mouse over
 *** TODO fix mimoctrlins - see comment in merge paths
 ** med prio
@@ -203,6 +211,11 @@ CLOSED: [2011-08-05 Fri 13:26]
 *** DONE draw rake symbol
 CLOSED: [2011-08-17 Wed 10:12]
 rake will be merged with select
+*** DONE fix spaceOut
+CLOSED: [2011-09-12 Mon 17:15]
+*** TODO formlib for properties view
+declarative way to define the form
+different view for decision and action
 *** TODO block everything not selectable from receiving focus
 among others unset/set on select would not be needed
 *** TODO chrome/jquery eats mouseup if text is selected when starting to drag
@@ -219,7 +232,6 @@ or hear about the chrome dnd and abort tapta dnd
 **** either in the save hooks or in the storage
 **** keep git-like storage above localstorage in mind
 ***** would it help?
-*** TODO fix spaceOut
 *** TODO drag preview
 *** TODO investigate keyup/down events in firefox, propertiesview
 *** TODO query stroke-width of src/tgt for arcs to properly end
